Fix table spacing.

--- a/css/master.css
+++ b/css/master.css
@@ -111,6 +111,10 @@ table th {
   margin: 0;
 }
 
+table td {
+  vertical-align: text-top;
+}
+
 table th h2 {
   font-size: 1rem;
   padding: 0 0 1rem 0;
